--- a/ProjectTest.ApplicationService/ProjectTest.ApplicationService.csproj
+++ b/ProjectTest.ApplicationService/ProjectTest.ApplicationService.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.0.2" />
     <PackageReference Include="MediatR" Version="9.0.0" />
   </ItemGroup>
 
